Update user credentials for cliente

--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                 link_de_redirecionamento: "https://google.com" // Exemplo: Dashboard Admin
             },
             {
-                usuario: "cliente",
-                senha: "abc",
+                usuario: "ELOISA",
+                senha: "131427",
                 link_de_redirecionamento: "https://bing.com" // Exemplo: Área do Cliente
             },
             {
