--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             {
                 usuario: "ELOISA",
                 senha: "131427",
-                link_de_redirecionamento: "https://bing.com" // Exemplo: Área do Cliente
+                link_de_redirecionamento: "https://andreliffit.my.canva.site/andre" // Exemplo: Área do Cliente
             },
             {
                 usuario: "visitante",
