--- a/index.html
+++ b/index.html
@@ -181,7 +181,12 @@
                 usuario: "visitante",
                 senha: "000",
                 link_de_redirecionamento: "https://example.com" // Exemplo: Página de Boas-vindas
-            }
+            },
+            {
+                usuario: "matheus",
+                senha: "123",
+                link_de_redirecionamento: "https://www.instagram.com/matheusmontev/" // Exemplo: Dashboard Admin
+            },
             // Adicione novos usuários copiando o bloco acima e colando aqui
         ];
         // =================================================================
